# Evolution-Parental-Instinct

./: .gitignore  CMakeLists.txt  LICENSE  Readme.md  pyproject.toml
simulate/: move.py
src/simulate/: blip.py  move.py  world.py
