[build-system]
requires = [
    "scikit-build-core", 
    "pybind11", 
    "ninja"]
build-backend = "scikit_build_core.build"

[project]
name = "Evolution: Parental Instict"
version = "0.0.1" 
authors = [
    {name="Munachimso Nwugo", email="munachimso.nwugo@gmail.com}
]
description = "A simulator for the evolution of parental instincts"
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = []

[project.urls]
Homepage = https://github.com/Muna-Louis-Nwugo/Evolution-Parental-Instinct


[tool.scikit-build]
cmake.generator = "Ninja"
cmake.version = ">=3.15"
cmake.args = ["-DPYTHON_EXECUTABLE=${PYTHON_EXECUTABLE}"]